--- a/WS1/app/src/main/res/layout/fragment_3.xml
+++ b/WS1/app/src/main/res/layout/fragment_3.xml
@@ -7,5 +7,7 @@
     <com.google.android.gms.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        />
 </LinearLayout>
